syntax = "proto3";

package auth;

option go_package = "wow-ruby/internal/pkg/proto/auth;authpb";

message Tokens{
    string acess_token = 1;
    string refresh_token = 2;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    Tokens tokens = 1;
}

message RegisterRequest{
    string email = 1;
    string password = 2;
}

message RegisterResponse{
    Tokens tokens = 1;
}

message ValidateTokenRequest{
    string acess_token = 1;
}

message ValidateTokenResponse{
    bool valid = 1;
    string user_id = 2;
    repeated string roles = 3;
    string error = 4;
}

message RefreshTokenRequest{
    string refresh_token = 1;
}

message RefreshTokenResponse{
    Tokens tokens = 1;
}

message InternalTokenRequest{
    string service_name = 1;
    repeated string scopes = 2;
}

message InternalTokenResponse{
    string token = 1;
}

message UserDetailsRequest{
    string email = 1;
}

message UserDetailsResponse{
    string user_id = 1;
    string email = 3;
    string hash = 4;
}

message LogoutRequest{
    string acess_token = 1;
}

message LogoutResponse{
    bool success = 1;
}

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc InternalToken(InternalTokenRequest) returns (InternalTokenResponse);
    rpc Logout(LogoutRequest) returns(LogoutResponse);
    rpc UserDetail(UserDetailsRequest) returns (UserDetailsResponse);
}